--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@ body {
   align-items: center;
   flex-direction: column;
   text-align: center;
-  margin: 0;
+  margin: 20px;
   overflow-y: auto;
   overflow-x: hidden;
   height: 100vh;
