--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,7 @@ body {
   overflow-y: auto;
   overflow-x: hidden;
   height: 100vh;
+  width: 90vw;
   opacity: 0;
   transition: opacity 0.5s ease-in-out;
   line-height: 1.7;
