--- a/styles.css
+++ b/styles.css
@@ -12,8 +12,6 @@ body {
   margin: 0;
   overflow-y: auto;
   overflow-x: hidden;
-  height: 100vh;
-  width: 90vw;
   opacity: 0;
   transition: opacity 0.5s ease-in-out;
   line-height: 1.7;
@@ -47,9 +45,9 @@ h1::after {
 }
 
 .text-box {
-  margin: 20px;
-  padding: 20px;
-  width: 100%;
+  margin-left: 20px;
+  padding: 5px;
+  width: 90vw;
   text-align: center;
 }
 
@@ -80,11 +78,11 @@ h1::after {
 }
 
 .link:active {
-  color: #faf9f9;
+  color: #69b456;
 }
 
 .link:active::after {
-  background: #69b456;
+  background: transparent;
 }
 
 /* Responsive Design */
