--- a/frontend-mentor-projects/social-links/style.css
+++ b/frontend-mentor-projects/social-links/style.css
@@ -11,7 +11,7 @@ body {
     font-family: 'Inter', sans-serif;
     margin: 5px;
     padding: 10px;
-    line-height: 1.5;
+    line-height: 1.7;
 }
 
 .social-links-box {
@@ -30,15 +30,23 @@ body {
 }
 
 .profile-picture {
+  width: 300px;
+  height: 300px;
     border-radius: 50%;
-    margin-top: 5px;
+    margin-top: 30px;
+    margin-bottom: 10px;
+}
+
+.profile-picture img {
+    width: 40%;
+    height: 40%;
 }
 
 .profile-name {
     color: #f5f5f5;
     font-size: 24px;
     font-weight: 700;
-    margin-top: 20px;
+    margin-top: 10px;
     text-align: center;
 }
 
@@ -46,7 +54,7 @@ body {
     color: #b4d35c;
     font-size: 20px;
     font-weight: 600;
-    margin-top: 5px;
+    margin-top: 3px;
     text-align: center;
 }
 
@@ -97,7 +105,7 @@ body {
 
 .footer-text {
     color: #f5f5f5;
-    font-size: 16px;
+    font-size: 14px;
     margin: 5px;
     text-align: center; /* centered text */
 }
@@ -111,6 +119,16 @@ body {
 @media (max-width: 480px) {
     .social-links-box {
         width: 90vw;
+    }
+    .profile-picture {
+      width: 150px;
+      height: 150px;
+    }
+    .profile-name {
+      font-size: 21px;
+    }
+    .location {
+      font-size: 18px;
     }
     .button {
       width: 75vw;
