--- a/frontend-mentor-projects/social-links/style.css
+++ b/frontend-mentor-projects/social-links/style.css
@@ -9,11 +9,15 @@
 body {
     background-color: #141414;
     font-family: 'Inter', sans-serif;
-    margin: 5px;
+    margin: 0 auto;
     padding: 10px;
+    text-align: center;
+    display: flex;
     justify-content: center;
     align-items: center;
     line-height: 1.7;
+    height: 100vh;
+    width: 100vw;
 }
 
 .social-links-box {
