--- a/frontend-mentor-projects/social-links/style.css
+++ b/frontend-mentor-projects/social-links/style.css
@@ -9,23 +9,19 @@
 body {
     background-color: #141414;
     font-family: 'Inter', sans-serif;
-    margin: 0 auto;
+    margin: 0;
     padding: 10px;
-    text-align: center;
     display: flex;
     justify-content: center;
     align-items: center;
-    line-height: 1.7;
     height: 100vh;
     width: 100vw;
+    text-align: center;
+    line-height: 1.7;
 }
 
 .social-links-box {
     background-color: #1f1f1f;
-    margin-left: 5px;
-    margin-right: 5px;
-    margin-top: 20px;
-    margin-bottom: 40px;
     padding: 30px;
     width: 50vw;
     border-radius: 14px;
@@ -33,11 +29,12 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin: 0;
 }
 
 .profile-picture {
-  width: 150px;
-  height: 150px;
+    width: 150px;
+    height: 150px;
     border-radius: 50%;
     margin-top: 30px;
     margin-bottom: 10px;
@@ -70,19 +67,17 @@ body {
     font-weight: 400;
     margin-top: 40px;
     margin-bottom: 10px;
-    text-align: center; /* centered text */
+    text-align: center;
 }
 
 .button {
-  display: block;
-  width: 35vw;
+    display: block;
+    width: 35vw;
     background-color: #333333;
     border: none;
     border-radius: 7px;
     color: #f3f3f3;
     cursor: pointer;
-    margin-left: 10px;
-    margin-right: 10px;
     margin-top: 15px;
     margin-bottom: 15px;
     padding: 10px 20px;
@@ -113,7 +108,7 @@ body {
     color: #f5f5f5;
     font-size: 14px;
     margin: 5px;
-    text-align: center; /* centered text */
+    text-align: center;
 }
 
 .footer-text a {
@@ -127,12 +122,12 @@ body {
         width: 90vw;
     }
     .profile-name {
-      font-size: 21px;
+        font-size: 21px;
     }
     .location {
-      font-size: 18px;
+        font-size: 18px;
     }
     .button {
-      width: 75vw;
+        width: 75vw;
     }
 }
