--- a/frontend-mentor-projects/social-links/style.css
+++ b/frontend-mentor-projects/social-links/style.css
@@ -18,6 +18,7 @@ body {
     width: 100vw;
     text-align: center;
     line-height: 1.7;
+    flex-direction: column;
 }
 
 .social-links-box {
@@ -29,7 +30,7 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: 0;
+    margin-top: 30px;
 }
 
 .profile-picture {
