--- a/frontend-mentor-projects/social-links/style.css
+++ b/frontend-mentor-projects/social-links/style.css
@@ -31,6 +31,7 @@ body {
     justify-content: center;
     align-items: center;
     margin-top: 30px;
+    margin-bottom: 30px;
 }
 
 .profile-picture {
@@ -95,8 +96,6 @@ body {
 }
 
 .footer {
-    display: block;
-    position: relative;
     margin-top: 30px;
     padding: 10px;
 }
