--- a/frontend-mentor-projects/social-links/style.css
+++ b/frontend-mentor-projects/social-links/style.css
@@ -9,42 +9,37 @@
 body {
     background-color: #141414;
     font-family: 'Inter', sans-serif;
-    margin: 0;
+    margin: 5px;
     padding: 10px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    width: 100vw;
-    text-align: center;
     line-height: 1.7;
-    flex-direction: column;
 }
 
 .social-links-box {
     background-color: #1f1f1f;
+    margin-left: 5px;
+    margin-right: 5px;
+    margin-top: 20px;
+    margin-bottom: 40px;
     padding: 30px;
-    width: 50vw;
+    width: 70vw;
     border-radius: 14px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin-top: 30px;
-    margin-bottom: 30px;
 }
 
 .profile-picture {
-    width: 150px;
-    height: 150px;
+  width: 300px;
+  height: 300px;
     border-radius: 50%;
     margin-top: 30px;
     margin-bottom: 10px;
 }
 
 .profile-picture img {
-    width: 25%;
-    height: 25%;
+    width: 40%;
+    height: 40%;
 }
 
 .profile-name {
@@ -69,17 +64,19 @@ body {
     font-weight: 400;
     margin-top: 40px;
     margin-bottom: 10px;
-    text-align: center;
+    text-align: center; /* centered text */
 }
 
 .button {
-    display: block;
-    width: 35vw;
+  display: block;
+  width: 55vw;
     background-color: #333333;
     border: none;
     border-radius: 7px;
     color: #f3f3f3;
     cursor: pointer;
+    margin-left: 10px;
+    margin-right: 10px;
     margin-top: 15px;
     margin-bottom: 15px;
     padding: 10px 20px;
@@ -110,7 +107,7 @@ body {
     color: #f5f5f5;
     font-size: 14px;
     margin: 5px;
-    text-align: center;
+    text-align: center; /* centered text */
 }
 
 .footer-text a {
@@ -123,13 +120,17 @@ body {
     .social-links-box {
         width: 90vw;
     }
+    .profile-picture {
+      width: 150px;
+      height: 150px;
+    }
     .profile-name {
-        font-size: 21px;
+      font-size: 21px;
     }
     .location {
-        font-size: 18px;
+      font-size: 18px;
     }
     .button {
-        width: 75vw;
+      width: 75vw;
     }
 }
