--- a/frontend-mentor-projects/social-links/style.css
+++ b/frontend-mentor-projects/social-links/style.css
@@ -10,18 +10,18 @@ body {
     background-color: #141414;
     font-family: 'Inter', sans-serif;
     margin: 5px;
+    margin-top: 35px;
     padding: 10px;
     line-height: 1.7;
 }
 
 .social-links-box {
     background-color: #1f1f1f;
-    margin-left: 5px;
-    margin-right: 5px;
+    margin: 20px auto;
     margin-top: 20px;
     margin-bottom: 40px;
     padding: 30px;
-    width: 70vw;
+    width: 50vw;
     border-radius: 14px;
     display: flex;
     flex-direction: column;
@@ -69,7 +69,7 @@ body {
 
 .button {
   display: block;
-  width: 55vw;
+  width: 35vw;
     background-color: #333333;
     border: none;
     border-radius: 7px;
@@ -107,7 +107,7 @@ body {
     color: #f5f5f5;
     font-size: 14px;
     margin: 5px;
-    text-align: center; /* centered text */
+    text-align: center;
 }
 
 .footer-text a {
