--- a/frontend-mentor-projects/social-links/style.css
+++ b/frontend-mentor-projects/social-links/style.css
@@ -9,17 +9,16 @@
 body {
     background-color: #141414;
     font-family: 'Inter', sans-serif;
-    margin: 5px;
-    margin-top: 35px;
-    padding: 10px;
     line-height: 1.7;
 }
 
+.spacer {
+    width: 100%;
+    height: 66px;
+}
 .social-links-box {
     background-color: #1f1f1f;
     margin: 20px auto;
-    margin-top: 20px;
-    margin-bottom: 40px;
     padding: 30px;
     width: 50vw;
     border-radius: 14px;
@@ -30,16 +29,11 @@ body {
 }
 
 .profile-picture {
-  width: 300px;
-  height: 300px;
+  width: 150px;
+  height: 150px;
     border-radius: 50%;
     margin-top: 30px;
     margin-bottom: 10px;
-}
-
-.profile-picture img {
-    width: 40%;
-    height: 40%;
 }
 
 .profile-name {
@@ -119,10 +113,6 @@ body {
 @media (max-width: 480px) {
     .social-links-box {
         width: 90vw;
-    }
-    .profile-picture {
-      width: 150px;
-      height: 150px;
     }
     .profile-name {
       font-size: 21px;
