--- a/frontend-mentor-projects/launch-countdown-timer/styles.css
+++ b/frontend-mentor-projects/launch-countdown-timer/styles.css
@@ -37,11 +37,10 @@ body, html {
     bottom: 0;
     left: 0;
     width: 100%;
-    height: auto;
+    height: 150px;
     background-image: url('image/pattern-hills.svg');
-    background-position: bottom;
-    background-repeat: repeat;
-    background-size: contain;
+    background-repeat: repeat-x;
+    background-size: auto 150px;
 }
 
 .content {
@@ -124,13 +123,11 @@ body, html {
     filter: invert(34%) sepia(98%) saturate(399%) hue-rotate(300deg) brightness(94%) contrast(101%);
 }
 
-.social-icons a img:active {
-    filter: invert(34%) sepia(98%) saturate(399%) hue-rotate(300deg) brightness(94%) contrast(101%);
-}
-
-/* Media Queries */
-
 @media (min-width: 481px) {
+    .pattern-hills {
+        height: 70px;
+    }
+
     .heading h1 {
         font-size: 27px;
     }
@@ -150,14 +147,14 @@ body, html {
 }
 
 @media (max-width: 480px) {
+    .pattern-hills {
+        height: 100px;
+    }
+
     .heading h1 {
         font-size: 21px;
     }
 
-  .pattern-hills {
-        background-repeat: no-repeat;  
-  }
-    
     .countdown-box {
         width: 65px;
     }
