--- a/frontend-mentor-projects/todo-app/styles.css
+++ b/frontend-mentor-projects/todo-app/styles.css
@@ -122,13 +122,24 @@ header {
 }
 
 /* Todo Section */
-.todo {
+.desktop-todo {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   width: 50vw;
   margin: 10px auto 0;
+  position: relative;
+  top: -50px;
+}
+
+.mobile-todo {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 90vw;
+  margin: 20px auto;
   position: relative;
   top: -50px;
 }
@@ -288,9 +299,12 @@ header {
     margin-top: 10px;
   }
 
-  .todo {
-    width: 90vw;
-    margin: 20px auto;
+  .desktop-todo {
+    display: none;
+  }
+
+  .mobile-todo {
+    display: block;
   }
 }
 
@@ -299,5 +313,13 @@ header {
   .page-header {
     height: 300px;
     background-image: url('image/bg-desktop-light.jpg');
+  }
+
+  .mobile-todo {
+    display: none;
+  }
+
+  .desktop-todo {
+    display: block;
   }
 }
