--- a/contact.css
+++ b/contact.css
@@ -7,8 +7,8 @@
 
 body {
   font-family: 'DM Sans', sans-serif;
-  background-color: #131212;
-  color: white;
+  background: linear-gradient(to bottom right, rgba(210, 235, 255, 1), rgba(242, 239, 255, 1), rgba(241, 255, 223, 0.3));
+  color: rgba(18, 20, 16, 1);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -17,7 +17,7 @@ body {
 
 /* Form Container */
 .form-container {
-  background-color: #252525;
+  background-color: white;
   padding: 2rem;
   border-radius: 8px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
@@ -57,7 +57,7 @@ input::placeholder, textarea::placeholder {
 }
 
 input:focus, textarea:focus {
-  border-color: black;
+  border-color: rgba(255, 2, 222, 1);
   outline: none;
 }
 
@@ -69,11 +69,11 @@ textarea {
 
 /* Submit Button */
 button {
-  background-color: #ff6200;
+  background-color: rgba(255, 2, 222, 1);
   color: #fff;
   padding: 0.75rem;
   border: none;
-  border-radius: 4px;
+  border-radius: 25px;
   width: 100%;
   font-size: 1rem;
   cursor: pointer;
